--- a/style.css
+++ b/style.css
@@ -217,8 +217,21 @@ body {
     width : 100px;
     background-color : #000000;
     position : fixed;
-    /* z-index: -1; */
     overflow : hidden;
     mix-blend-mode : difference;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     animation : "birth 0.4s linear 0s 1 normal";
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 5px;
 }
